handle form action

--- a/src/resources/views/me/index.hbs
+++ b/src/resources/views/me/index.hbs
@@ -1,5 +1,6 @@
 <main>
     <div class="container-fluid px-4">
+    <form method="POST" action="/me/handle-form-actions">
         <h1 class="mt-4">Danh sách khóa học</h1>
         <div class="mb-2">
             <a href="/me/trash/posts">Thùng rác ({{ deleteCount }})</a>
@@ -18,12 +19,12 @@
             </label>
             </div>
 
-            <select id="inputState" class="w-25 mx-2 form-control form-control-sm">
-            <option selected>-- Chọn hành động --</option>
-            <option>Xóa</option>
+            <select name="action" id="inputState" class="w-25 mx-2 form-control form-control-sm" required>
+            <option value="" selected>-- Chọn hành động --</option>
+            <option value="delete">Xóa</option>
             </select>
 
-            <button class="disabled btn btn-primary btn-sm">Thực hiện</button>
+            <button class="check-all-submit btn btn-primary btn-sm disabled">Thực hiện</button>
         </div>
         <table class="table table-striped">
             <thead>
@@ -65,7 +66,7 @@
                 {{/each}}
             </tbody>
         </table>
-
+    </form>
     </div>
 </main>
 
@@ -96,6 +97,7 @@
     var deletePostForm = document.forms['delete-post-form'];
     var checkboxAll = document.getElementById('checkbox-all');
     var postItemCheckboxs = document.querySelectorAll('input[name="postIds[]"]');
+    var checkAllSubmit = document.querySelector('.check-all-submit');
 
     deletePost.addEventListener('show.bs.modal', function (event) {
         // Button that triggered the modal
@@ -116,6 +118,7 @@
         postItemCheckboxs.forEach(postItemCheckbox => {
             postItemCheckbox.checked = isCheckedAll;
         })
+        renderCheckAllSubmitBtn()
     }
 
     // lắng nghe sự kiện postItemCheckboxs
@@ -124,10 +127,19 @@
             let isCheckedAll = postItemCheckboxs.length === document.querySelectorAll('input[name="postIds[]"]:checked').length
 
             checkboxAll.checked = isCheckedAll;
-
+        renderCheckAllSubmitBtn()
         }
     })
 
-    // create function 
+    // create function Re-render check all submit button
+    function renderCheckAllSubmitBtn() {
+        let checkCount = document.querySelectorAll('input[name="postIds[]"]:checked').length;
+
+        if(checkCount) {
+            checkAllSubmit.classList.remove('disabled');
+        } else{
+            checkAllSubmit.classList.add('disabled')
+        }
+    }
 
 </script>
