add promise all in blog controller

--- a/src/resources/views/blog/index.hbs
+++ b/src/resources/views/blog/index.hbs
@@ -1,12 +1,14 @@
+{{#each featureds}}
 <div class="card mb-4">
-    <a href="#"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+    <a href="blog/{{this.slug}}"><img class="card-img-top" src="{{this.image}}" alt="..." /></a>
     <div class="card-body">
-        <div class="small text-muted">Jun 02 2021 16:39</div>
-        <h2 class="card-title">Featured Post Title</h2>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+        <div class="small text-muted">{{this.createdAt}}</div>
+        <h2 class="card-title">{{this.title}}</h2>
+        <p class="card-text">{{this.description}}</p>
         <a class="btn btn-primary" href="#">Read more →</a>
     </div>
 </div>
+{{/each}}
 
 <!-- Nested row for non-featured blog posts-->
 <div class="row">
