--- a/src/resources/views/me/index.hbs
+++ b/src/resources/views/me/index.hbs
@@ -32,7 +32,7 @@
                     <th>#</th>
                     <th>STT</th>
                     <th>Tiêu đề</th>
-                    <th>Slug</th>
+                    <th>Featured</th>
                     <th>Image</th>
                     <th>Thời gian</th>
                     <th colspan="2">Thời gian tạo</th>
@@ -49,7 +49,7 @@
                 </td>
                     <td>{{sum @index 1}}</td>
                     <td>{{this.title}}</td>
-                    <td>{{this.slug}}</td>
+                    <td>{{this.featured}}</td>
                     <td>{{this.image}}</td>
                     <td>{{this.createdAt}}</td>
                     <td>
