--- a/src/resources/views/layouts/me.hbs
+++ b/src/resources/views/layouts/me.hbs
@@ -9,6 +9,7 @@
         <title>{{title}}</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="/css/me.css" rel="stylesheet" />
+        <link href="/font/bootstrap-icons.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
     </head>
 <body class="sb-nav-fixed">
@@ -51,7 +52,7 @@
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" href="/me">Danh sách bài viết</a>
-                            <a class="nav-link" href="/blog/newPost">Thêm bài viết</a>
+                            <a class="nav-link" href="/blog/new">Thêm bài viết</a>
                             <a class="nav-link" href="/blog/trash">Thùng rác</a>
                         </nav>
                     </div>
