--- a/src/resources/views/me/index.hbs
+++ b/src/resources/views/me/index.hbs
@@ -2,15 +2,14 @@
     <div class="container-fluid px-4">
     <form name="handleFormActions" method="POST" action="/blog/handle-form-actions">
         <h1 class="mt-4">Danh sách khóa học</h1>
-        <div class="mb-2">
-            <a href="/blog/trash">Thùng rác ({{ deleteCount }})</a>
-        </div>
-
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+            <li class="breadcrumb-item"><a href="/me">Dashboard</a></li>
             <li class="breadcrumb-item active">Danh sách khóa học</li>
         </ol>
 
+        <div class="mb-2">
+            <a href="/blog/trash">Thùng rác ({{ deleteCount }})</a>
+        </div>
         <div class="mt-4 d-flex align-items-center">
             <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
@@ -31,11 +30,11 @@
                 <tr>
                     <th>#</th>
                     <th>STT</th>
-                    <th>Tiêu đề</th>
+                    <th>Tiêu đề <i class="bi bi-sort-alpha-down"></i></th>
                     <th>Featured</th>
                     <th>Image</th>
-                    <th>Thời gian</th>
-                    <th colspan="2">Thời gian tạo</th>
+                    <th>Thời gian <i class="bi bi-sort-alpha-down"></i></th>
+                    <th colspan="2">Thời gian tạo <i class="bi bi-sort-alpha-down"></i></th>
                 </tr>
             </thead>
 
@@ -53,14 +52,14 @@
                     <td>{{this.image}}</td>
                     <td>{{this.createdAt}}</td>
                     <td>
-                        <a class="me-2" href="/blog/{{this._id}}/editPost">Sửa</a>
+                        <a class="me-2" href="/blog/{{this._id}}/edit">Sửa</a>
                         <a href="#" data-bs-toggle="modal" data-bs-target="#deletePost" data-bs-whatever="{{this._id}}">Xóa</a>
                     </td>
                 </tr>
                 {{else}}
                 <tr>
                     <td class="text-center" colspan = "7">Bạn chưa đăng bài viết nào.
-                        <a href="/blog/newpost">Đăng khóa học</a>
+                        <a href="/blog/new">Đăng khóa học</a>
                     </td>
                 </tr>
                 {{/each}}
@@ -131,7 +130,7 @@
 
     var btnDeletePostt = document.getElementById('btnDeletePost');
     btnDeletePostt.onclick = function() {
-        deletePostForm.action = '/blog/' + postId + '/deletePost?_method=DELETE';
+        deletePostForm.action = '/blog/' + postId + '/delete?_method=DELETE';
         deletePostForm.submit();
     }
 
