fix bug content detail not display html

--- a/src/resources/views/blog/detail.hbs
+++ b/src/resources/views/blog/detail.hbs
@@ -14,7 +14,7 @@
     <figure class="mb-4"><img class="img-fluid rounded" src="{{post.image}}" alt="..." /></figure>
     <!-- Post content-->
     <section class="mb-5">
-        {{post.content}}
+        {{{post.content}}}
     </section>
 </article>
 <!-- Comments section-->
