create auto id field

--- a/src/resources/views/me/index.hbs
+++ b/src/resources/views/me/index.hbs
@@ -54,7 +54,7 @@
                         <input class="form-check-input" name="postIds[]" type="checkbox" value="{{this._id}}">
                     </div>
                 </td>
-                    <td>{{this._id}}</td>
+                    <td>{{this.postId}}</td>
                     <td>{{this.title}}</td>
                     <td>{{this.featured}}</td>
                     <td>{{this.image}}</td>
