--- a/src/resources/views/blog/trash.hbs
+++ b/src/resources/views/blog/trash.hbs
@@ -49,7 +49,7 @@
                                     <input class="form-check-input" name="postIds[]" type="checkbox" value="{{this._id}}">
                                 </div>
                             </td>
-                            <td>{{sum @index 1}}</td>
+                            <td>{{this.postId}}</td>
                             <td>{{this.title}}</td>
                             <td>{{this.slug}}</td>
                             <td>{{this.image}}</td>
