--- a/src/resources/views/users/register.hbs
+++ b/src/resources/views/users/register.hbs
@@ -11,19 +11,19 @@
                                     <div class="row mb-3">
                                         <div class="col-md-6">
                                             <div class="form-floating mb-3 mb-md-0">
-                                                <input name="firstName" class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
-                                                <label for="inputFirstName">First name</label>
+                                                <input name="firstname" class="form-control" id="input-firstname" type="text" placeholder="Enter your first name" />
+                                                <label for="inputFirstname">First name</label>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-floating">
-                                                <input name="lastName" class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
-                                                <label for="inputLastName">Last name</label>
+                                                <input name="lastname" class="form-control" id="input-lastname" type="text" placeholder="Enter your last name" />
+                                                <label for="inputLastname">Last name</label>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <input name="userName" class="form-control" id="input-username" type="text" placeholder="User Name" />
+                                        <input name="username" class="form-control" id="input-username" type="text" placeholder="User Name" />
                                         <label for="input-username">User Name</label>
                                     </div>
                                     <div class="form-floating mb-3">
@@ -33,13 +33,13 @@
                                     <div class="row mb-3">
                                         <div class="col-md-6">
                                             <div class="form-floating mb-3 mb-md-0">
-                                                <input name="password" class="form-control" id="inputPassword" type="password" placeholder="Create a password" />
+                                                <input name="password" class="form-control" id="input-password" type="password" placeholder="Create a password" />
                                                 <label for="inputPassword">Password</label>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-floating mb-3 mb-md-0">
-                                                <input name="confirmPassword" class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
+                                                <input name="confirmPassword" class="form-control" id="input-passwordConfirm" type="password" placeholder="Confirm password" />
                                                 <label for="inputPasswordConfirm">Confirm Password</label>
                                             </div>
                                         </div>
