--- a/src/resources/views/users/login.hbs
+++ b/src/resources/views/users/login.hbs
@@ -7,13 +7,13 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
-                                <form>
+                                <form method="POST" action="/login">
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                        <label for="inputEmail">Email address</label>
+                                        <input name="username" class="form-control" id="username" type="text" placeholder="Username" />
+                                        <label for="username">Username</label>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
+                                        <input name="password" class="form-control" id="inputPassword" type="password" placeholder="Password" />
                                         <label for="inputPassword">Password</label>
                                     </div>
                                     <div class="form-check mb-3">
@@ -22,7 +22,7 @@
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a class="small" href="password.html">Forgot Password?</a>
-                                        <a class="btn btn-primary" href="index.html">Login</a>
+                                        <button class="btn btn-primary">Login</button>
                                     </div>
                                 </form>
                             </div>
