--- a/src/resources/views/me/index.hbs
+++ b/src/resources/views/me/index.hbs
@@ -1,10 +1,10 @@
 <main>
     <div class="container-fluid px-4">
     <form name="handleFormActions" method="POST" action="/blog/handle-form-actions">
-        <h1 class="mt-4">Danh sách khóa học</h1>
+        <h1 class="mt-4">Danh sách bài viết</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/me">Dashboard</a></li>
-            <li class="breadcrumb-item active">Danh sách khóa học</li>
+            <li class="breadcrumb-item active">Danh sách bài viết</li>
         </ol>
 
         <div class="mb-2">
