--- a/src/resources/views/partials/navbars.hbs
+++ b/src/resources/views/partials/navbars.hbs
@@ -10,8 +10,8 @@
                 <li class="nav-item"><a class="nav-link active" href="/about">About</a></li>
                 <li class="nav-item"><a class="nav-link active" href="/contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/blog">Blog</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/register">Register</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/login">Login</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/register">Register</a></li>
             </ul>
         </div>
     </div>
