--- a/src/resources/views/users/register.hbs
+++ b/src/resources/views/users/register.hbs
@@ -7,7 +7,7 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
                             <div class="card-body">
-                                <form method="POST" action="/register">
+                                <form method="POST" action="/users/register">
                                     <div class="row mb-3">
                                         <div class="col-md-6">
                                             <div class="form-floating mb-3 mb-md-0">
