--- a/src/resources/views/partials/navbars.hbs
+++ b/src/resources/views/partials/navbars.hbs
@@ -12,6 +12,7 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/blog">Blog</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/register">Register</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/users/logout">Logout</a></li>
             </ul>
         </div>
     </div>
