--- a/src/resources/views/users/login.hbs
+++ b/src/resources/views/users/login.hbs
@@ -7,7 +7,7 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
-                                <form method="POST" action="/users/login">
+                                <form method="POST" action="/users/signin">
                                     <div class="form-floating mb-3">
                                         <input name="username" class="form-control" id="username" type="text" placeholder="Username" />
                                         <label for="username">Username</label>
