--- a/src/resources/views/blog/trash.hbs
+++ b/src/resources/views/blog/trash.hbs
@@ -33,8 +33,7 @@
                             <th>#</th>
                             <th>STT</th>
                             <th>Tiêu đề</th>
-                            <th>Slug</th>
-                            <th>Image</th>
+                            <th>Tác giả</th>
                             <th>Pott Status</th>
                             <th>Thời gian</th>
                             <th colspan="2">Thời gian tạo</th>
@@ -51,8 +50,7 @@
                             </td>
                             <td>{{this.postId}}</td>
                             <td>{{this.title}}</td>
-                            <td>{{this.slug}}</td>
-                            <td>{{this.image}}</td>
+                            <td>{{this.user.username}}</td>
                             <td>{{this.postStatus}}</td>
                             <td>{{this.commentStatus}}</td>
                             <td>{{this.deletedAt}}</td>
